Disable LB panel by default; allow UUID for Sec Group ID.
A couple fixes for Quantum:

  * The Load Balancers panel is now no longer enabled by
    default since it is disabled by default in Quantum.
  * Security Groups and Security Group Rules now support both
    Nova's integer IDs and Quantum's UUID IDs.
  * Regroups all the Quantum panels into a "Manage Network"
    panel group to match "Manage Compute" above it.
  * Adds tests for both int and UUID ids in the Security
    Group test suite.

Fixes bug 1153477 and fixes bug 1155244.

Change-Id: I2327901634a83f95c5cff4ba91c8c7c32a0ad8af

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -57,7 +57,7 @@ LOCAL_PATH = os.path.dirname(os.path.abspath(__file__))
 
 # We recommend you use memcached for development; otherwise after every reload
 # of the django development server, you will have to login again. To use
-# memcached set CACHES to something like 
+# memcached set CACHES to something like
 # CACHES = {
 #    'default': {
 #        'BACKEND' : 'django.core.cache.backends.memcached.MemcachedCache',
@@ -119,7 +119,7 @@ OPENSTACK_HYPERVISOR_FEATURES = {
 # services provided by quantum.  Currently only the load balancer service
 # is available.
 OPENSTACK_QUANTUM_NETWORK = {
-    'enable_lb': True
+    'enable_lb': False
 }
 
 # OPENSTACK_ENDPOINT_TYPE specifies the endpoint type to use for the endpoints
