Update Horizon for Django 1.5 compatibility
Changes made:
- Changed template url tags: {% url myview %} to {% url myview %}
- Import json instead of django.utils.simplejson
- Import django.utils.encoding.force_unicode instead of
  django.utils.translation.force_unicode
- Fixed error in tables/base.py for CheckboxInput, pass a callable
  check_test. Django 1.5 does not silently fail on this now.
- Set SECRET_KEY in test/settingspy, Django 1.5 refuse to start if it
  is not set.
- Added notes about ALLOWED_HOSTS when running Horizon in Production

Fixes bug 1147329

Change-Id: I6ac1e81498f41141dea99760922991feb310a326

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -7,6 +7,13 @@ from openstack_dashboard import exceptions
 DEBUG = True
 TEMPLATE_DEBUG = DEBUG
 
+# Required for Django 1.5.
+# If horizon is running in production (DEBUG is False), set this
+# with the list of host/domain names that the application can serve.
+# For more information see:
+# https://docs.djangoproject.com/en/dev/ref/settings/#allowed-hosts
+#ALLOWED_HOSTS = ['horizon.example.com', ]
+
 # Set SSL proxy settings:
 # For Django 1.4+ pass this header from the proxy after terminating the SSL,
 # and don't forget to strip it from the client's request.
@@ -60,8 +67,8 @@ LOCAL_PATH = os.path.dirname(os.path.abspath(__file__))
 # behind a load-balancer). Either you have to make sure that a session gets all
 # requests routed to the same dashboard instance or you set the same SECRET_KEY
 # for all of them.
-# from horizon.utils import secret_key
-# SECRET_KEY = secret_key.generate_or_read_from_file(os.path.join(LOCAL_PATH, '.secret_key_store'))
+from horizon.utils import secret_key
+SECRET_KEY = secret_key.generate_or_read_from_file(os.path.join(LOCAL_PATH, '.secret_key_store'))
 
 # We recommend you use memcached for development; otherwise after every reload
 # of the django development server, you will have to login again. To use
