Add a logging handler for the cinderclient to the local_settings.py.example
This handles the Horizon piece of the API client logging wonderfulness

Change-Id: Id2293898557b2fbbde092d8b67044482caf25c09
Fixes: Bug 1182678

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -210,6 +210,10 @@ LOGGING = {
             'handlers': ['console'],
             'propagate': False,
         },
+        'cinderclient': {
+            'handlers': ['console'],
+            'propagate': False,
+        },
         'keystoneclient': {
             'handlers': ['console'],
             'propagate': False,
