Renames tools/pip-requires to requirements.txt
and tools/test-requires to test-requirements.txt

These are standard files and tools in the
general world are growing intelligence about them.

Change-Id: Iac3c680dd19cabd8ea38598a6e2bb27238030a2d
Fixes: bug #1179008

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,7 +15,7 @@ include tox.ini
 include bin/less/lessc
 include doc/Makefile
 include doc/source/_templates/.placeholder
-include tools/pip-requires
-include tools/test-requires
+include requirements.txt
+include test-requirements.txt
 
 exclude openstack_dashboard/local/local_settings.py
