--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pbr>=0.5,<0.6
 
 # Horizon Core Requirements
 Django>=1.4,<1.6
-django_compressor
+django_compressor>=1.3
 django_openstack_auth>=1.0.8
 iso8601>=0.1.4
 netaddr
