--- a/tox.ini
+++ b/tox.ini
@@ -25,5 +25,16 @@ commands = /bin/bash run_tests.sh -N --coverage
 downloadcache = ~/cache/pip
 
 [flake8]
+builtins = _
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py
-ignore = E121,E126,E127,E128,W602,F,H
+# E121 continuation line indentation is not a multiple of four
+# E126 continuation line over-indented for hanging indent
+# E127 continuation line over-indented for visual indent
+# E128 continuation line under-indented for visual indent
+# F401 '<smth>' imported but unused
+# F403 'from <smth> import *' used; unable to detect undefined names
+# F811 redefinition of unused '<smth>' from line <line_#>
+# F821 undefined name '<smth>'
+# F841 local variable '<smth>' is assigned to but never used
+# F999 syntax error in doctest
+ignore = E121,E126,E127,E128,F401,F403,F811,F821,F841,F999,H
