--- a/tox.ini
+++ b/tox.ini
@@ -37,4 +37,14 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # F821 undefined name '<smth>'
 # F841 local variable '<smth>' is assigned to but never used
 # F999 syntax error in doctest
-ignore = E121,E126,E127,E128,F401,F403,F811,F821,F841,F999,H
+# H101 Use TODO(NAME)
+# H201 no 'except:' at least use 'except Exception:'
+# H301 one import per line
+# H302 import only modules.'from optparse import make_option' does not import a module
+# H303 No wildcard (*) import.
+# H304 No relative imports. 'from .views import IndexView' is a relative import
+# H306 imports not in alphabetical order (horizon.loaders, horizon.conf)
+# H4xx docstrings
+# H701 empty localization string
+# H702  Formatting operation should be outside of localization method call
+ignore = E121,E126,E127,E128,F401,F403,F811,F821,F841,F999,H101,H201,H301,H302,H303,H304,H306,H4,H701,H702
