--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ pbr>=0.5.16,<0.6
 django>=1.4,<1.6
 django_compressor>=1.3
 django_openstack_auth>=1.0.11,!=1.1.0
+eventlet>=0.12.0
+kombu>2.4.7
 iso8601>=0.1.4
 netaddr
 python-cinderclient>=1.0.4,<2
