--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ python-keystoneclient>=0.2,<0.3
 python-novaclient>=2.12.0,<3
 python-quantumclient>=2.2.0,<3.0.0
 python-swiftclient>=1.2,<2
+python-ceilometerclient>=1.0.1
 pytz
 # Horizon Utility Requirements
 # for SECURE_KEY generation
