--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ python-glanceclient>=0.9.0,<2
 python-heatclient>=0.2.2
 python-keystoneclient>=0.2,<0.3
 python-novaclient>=2.12.0,<3
-python-quantumclient>=2.2.0,<3.0.0
+python-neutronclient>=2.2.3,<3.0.0
 python-swiftclient>=1.2,<2
 pytz
 # Horizon Utility Requirements
