FWaaS Horizon panel
Implements: blueprint fwaas-horizon

Change-Id: I1017573887922b4dea0a42d46965de2b86325b0e

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -158,6 +158,7 @@ OPENSTACK_HYPERVISOR_FEATURES = {
 # balancer service, security groups, quotas, VPN service.
 OPENSTACK_NEUTRON_NETWORK = {
     'enable_lb': False,
+    'enable_firewall': False,
     'enable_quotas': True,
     'enable_security_group': True,
     'enable_vpn': False,
