Sync install_venv_common from oslo
Change-Id: Iadcfa6d00b963a19ce15300b2293036cf0e8204b

--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -1,9 +1,10 @@
 [DEFAULT]
+module=config
 module=eventlet_backdoor
+module=install_venv_common
 module=notifier
 module=rpc
 module=service
 module=threadgroup
-module=config
 
 base=openstack_dashboard
