--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,13 @@ eventlet>=0.12.0
 kombu>2.4.7
 iso8601>=0.1.4
 netaddr
-python-cinderclient>=1.0.4,<2
-python-glanceclient>=0.9.0,<2
+python-cinderclient>=1.0.4
+python-glanceclient>=0.9.0
 python-heatclient>=0.2.2
-python-keystoneclient>=0.2,<0.3
-python-novaclient>=2.12.0,<3
-python-neutronclient>=2.2.3,<3.0.0
-python-swiftclient>=1.2,<2
+python-keystoneclient>=0.3.0
+python-novaclient>=2.12.0
+python-neutronclient>=2.2.3,<3
+python-swiftclient>=1.2
 python-ceilometerclient>=1.0.1
 pytz>=2010h
 # Horizon Utility Requirements
