Sync pytz from requirements.txt
pip 1.4 is imminent, and doesn't install pre-release versions if you
don't ask for them - this includes the date-based version of pytz.

Change-Id: I52fa89005dfedf94a469b3601b3c3d6356eb0174

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ python-novaclient>=2.12.0,<3
 python-neutronclient>=2.2.3,<3.0.0
 python-swiftclient>=1.2,<2
 python-ceilometerclient>=1.0.1
-pytz
+pytz>=2010h
 # Horizon Utility Requirements
 # for SECURE_KEY generation
 lockfile>=0.8
