Drop NodeJS dependency in favor of pure-python lesscpy
While less.js from lesscss.org is still the most standard-compliant (err
defining) LESS implementation, a pure-python one will drasticly simplify
deployments.

Since lesscpy doesn't support {outfile} just write to stdout,
django_compressor will happily take that (See
http://django-compressor.readthedocs.org/en/master/settings/#django.conf.settings.COMPRESS_PRECOMPILERS)

Drop dependency documentation, there are no external (non-Python) tools
left to setup.

Meanwhile, lesscpy(>=0.9j) supports SVG stylesheets.

Change-Id: I89ed102f7be4b554a28b001c9c0d40dab4a51ae6

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django_compressor>=1.3
 django_openstack_auth>=1.1.1
 eventlet>=0.13.0
 kombu>=2.4.8
+lesscpy>=0.9j
 iso8601>=0.1.4
 netaddr
 python-cinderclient>=1.0.4
