--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,10 @@ all_files = 1
 build-dir = doc/build
 source-dir = doc/source
 
+[entry_points]
+console_scripts = 
+    openstack_dashboard-rootwrap = openstack_dashboard.openstack.common.rootwrap.cmd:main
+
 [nosetests]
 verbosity=2
 detailed-errors=1
