--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -1,8 +1,10 @@
 [DEFAULT]
 module=config
 module=eventlet_backdoor
+module=fileutils
 module=install_venv_common
 module=notifier
+module=policy
 module=rpc
 module=service
 module=threadgroup
