--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -155,11 +155,12 @@ OPENSTACK_HYPERVISOR_FEATURES = {
 }
 
 # The OPENSTACK_NEUTRON_NETWORK settings can be used to enable optional
-# services provided by neutron.  Currently only the load balancer service
-# is available.
+# services provided by neutron. Options currenly available are load
+# balancer service, security groups, quotas.
 OPENSTACK_NEUTRON_NETWORK = {
-    'enable_security_group': True,
     'enable_lb': False,
+    'enable_quotas': True,
+    'enable_security_group': True,
 }
 
 # OPENSTACK_ENDPOINT_TYPE specifies the endpoint type to use for the endpoints
