Sync Transifex config with the source lang change in Transifex
Closes-Bug: #1179526

source_lang mismatch between Horizon and OpenStack Hub projects
has been addressed and the soruce language is changed from en_US
to en. This commit updates .tx/config to catch up it.

Also adds an entry for djangojs.po translation which was added
to Transifex recently.

Change-Id: I9a574b92a8396d2fda493d8dfa1261ddccc4ad02

--- a/.tx/config
+++ b/.tx/config
@@ -3,9 +3,15 @@ host = https://www.transifex.com
 
 [horizon.horizon-translations]
 file_filter = horizon/locale/<lang>/LC_MESSAGES/django.po
-source_lang = en_US
+source_file = horizon/locale/en/LC_MESSAGES/django.po
+source_lang = en
 
 [horizon.openstack-dashboard-translations]
 file_filter = openstack_dashboard/locale/<lang>/LC_MESSAGES/django.po
-source_lang = en_US
+source_file = openstack_dashboard/locale/en/LC_MESSAGES/django.po
+source_lang = en
 
+[horizon.horizon-js-translations]
+file_filter = horizon/locale/<lang>/LC_MESSAGES/djangojs.po
+source_file = horizon/locale/en/LC_MESSAGES/djangojs.po
+source_lang = en
