Add Cisco N1K plugin support in Horizon
This adds Horizon capability to configure and
use network profiles and policy profiles
on the Cisco Nexus 1000V to be used with
networks and instances as is done via neutron
CLI.

To turn on the new dashboard the local_settings
file needs to turn the profile_settings NEUTRON
config variable to cisco.

TODO items include creating a better palate
of unit tests that will run not only when
the cisco n1k subplugin is being used but
in default setting as well.
Need to remove the conditional statements
in the unit tests and make it inclusive.
Additionally need to get a better solution
for how the dashboard/panel registration will
work. Should it be a boolean or check for vendor
specific names.
Also some cleanup and refactoring of commonly
used code everywhere.

Implements: blueprint horizon-cisco-n1k

Change-Id: If6e797ac28c8486cfa92e02742c409d193d9ec84

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -160,6 +160,11 @@ OPENSTACK_NEUTRON_NETWORK = {
     'enable_lb': False,
     'enable_quotas': True,
     'enable_security_group': True,
+    # The profile_support option is used to detect if an external router can be
+    # configured via the dashboard. When using specific plugins the
+    # profile_support can be turned on if needed.
+    'profile_support': None,
+    #'profile_support': 'cisco',
 }
 
 # The OPENSTACK_IMAGE_BACKEND settings can be used to customize features
