--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,6 @@ downloadcache = ~/cache/pip
 [flake8]
 builtins = _
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py
-# E121 continuation line indentation is not a multiple of four
 # E126 continuation line over-indented for hanging indent
 # E127 continuation line over-indented for visual indent
 # E128 continuation line under-indented for visual indent
@@ -42,4 +41,4 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # H4xx docstrings
 # H701 empty localization string
 # H702 Formatting operation should be outside of localization method call
-ignore = E121,E126,E127,E128,F403,F999,H102,H4,H701,H702
+ignore = E126,E127,E128,F403,F999,H102,H4,H701,H702
