--- a/tox.ini
+++ b/tox.ini
@@ -38,4 +38,5 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # H4xx docstrings
 # H701 empty localization string
 # H702 Formatting operation should be outside of localization method call
-ignore = E127,E128,H102,H4,H701,H702
+# H803 git commit title should not end with period (disabled on purpose, see bug #1236621)
+ignore = E127,E128,H102,H4,H701,H702,H803
