--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ setenv = VIRTUAL_ENV={envdir}
          NOSE_OPENSTACK_SHOW_ELAPSED=1
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands = /bin/bash run_tests.sh -N
+commands = /bin/bash run_tests.sh -N --no-pep8
 
 [testenv:pep8]
 commands = /bin/bash run_tests.sh -N --pep8
@@ -19,12 +19,12 @@ commands = /bin/bash run_tests.sh -N --pep8
 commands = {posargs}
 
 [testenv:cover]
-commands = /bin/bash run_tests.sh -N --coverage
+commands = /bin/bash run_tests.sh -N --no-pep8 --coverage
 
 [testenv:py27dj14]
 basepython = python2.7
 commands = pip install django==1.4
-           /bin/bash run_tests.sh -N
+           /bin/bash run_tests.sh -N --no-pep8
 
 [tox:jenkins]
 downloadcache = ~/cache/pip
