Update troveclient to 1.0.0
Closes-Bug: #1238121

Author: Robert Myers <robert.myers@rackspace.com>

Change-Id: I03d3d95602f4009c97d37fdf8e241ec8ab82389d

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ python-novaclient>=2.15.0
 python-neutronclient>=2.3.0,<3
 python-swiftclient>=1.5
 python-ceilometerclient>=1.0.6
-python-troveclient<1
+python-troveclient>=1.0.0
 pytz>=2010h
 # Horizon Utility Requirements
 # for SECURE_KEY generation
