--- a/tox.ini
+++ b/tox.ini
@@ -34,8 +34,7 @@ builtins = _
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py
 # E127 continuation line over-indented for visual indent
 # E128 continuation line under-indented for visual indent
-# H4xx docstrings
 # H701 empty localization string
 # H702 Formatting operation should be outside of localization method call
 # H803 git commit title should not end with period (disabled on purpose, see bug #1236621)
-ignore = E127,E128,H4,H701,H702,H803
+ignore = E127,E128,H701,H702,H803
