Add logging configuration for iso8601 module
iso8601 module outputs log messages but it is not useful for users,
so this commit assigns null log handler to iso8601 module.
This change suppresses iso8601 log messages during unit tests.

Also moves openstack_dashboard related logging config for unit test
from horizon to openstack_dashboard.

Change-Id: I01cf12688118e2137382b8dc7a050b3587749354
Closes-Bug: #1250554

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -337,6 +337,10 @@ LOGGING = {
             'level': 'DEBUG',
             'propagate': False,
         },
+        'iso8601': {
+            'handlers': ['null'],
+            'propagate': False,
+        },
     }
 }
 
