Add missing egress sec group for all tcp/udp/icmp
When creating "Security Group Egress ALL TCP/UDP/ICMP", the
direction is always Ingress, need to add egress in the situation.

Fixes bug #1254040

Change-Id: I1a2bdc07d7ca4ecc12ebdb35a1f357de0d09c502

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -360,6 +360,8 @@ LOGGING = {
     }
 }
 
+# 'direction' should not be specified for all_tcp/udp/icmp.
+# It is specified in the form.
 SECURITY_GROUP_RULES = {
     'all_tcp': {
         'name': 'ALL TCP',
