--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,11 @@
 [tox]
 envlist = py26,py27,py27dj14,pep8,py33
+minversion = 1.6
+skipsdist = True
 
 [testenv]
+usedevelop = True
+install_command = pip install -U {opts} {packages}
 setenv = VIRTUAL_ENV={envdir}
          NOSE_WITH_OPENSTACK=1
          NOSE_OPENSTACK_COLOR=1
