Decrypt and display VM generated password
Add optional Retrieve Password action on instance that allows users
to decrypt, on client side, the password generated for the Admin
session.

Change-Id: I37cc93ae7871bf78e90513f58e169883fbfd1621
Implements: blueprint decrypt-and-display-vm-generated-password

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -150,6 +150,10 @@ OPENSTACK_KEYSTONE_BACKEND = {
     'can_edit_role': True
 }
 
+#Setting this to True, will add a new "Retrieve Password" action on instance,
+#allowing Admin session password retrieval/decryption.
+#OPENSTACK_ENABLE_PASSWORD_RETRIEVE = False
+
 # The Xen Hypervisor has the ability to set the mount point for volumes
 # attached to instances (other Hypervisors currently do not). Setting
 # can_set_mount_point to True will add the option to set the mount point
