--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,7 @@ import_exceptions = collections.defaultdict,
                     django.core.urlresolvers.reverse,
                     django.core.urlresolvers.reverse_lazy,
                     django.template.loader.render_to_string,
+                    django.test.utils.override_settings,
                     django.utils.datastructures.SortedDict,
                     django.utils.encoding.force_unicode,
                     django.utils.html.conditional_escape,
