--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -32,7 +32,8 @@ TEMPLATE_DEBUG = DEBUG
 # service API. For example, The identity service APIs have inconsistent
 # use of the decimal point, so valid options would be "2.0" or "3".
 # OPENSTACK_API_VERSIONS = {
-#     "identity": 3
+#     "identity": 3,
+#     "volume": 2
 # }
 
 # Set this to True if running on multi-domain model. When this is enabled, it
