adding policy check for neutron
Policy checks for all actions on firewalls, loadbalancers, network_topology,
networks, routers and vpn panels.

Co-Authored-By: Lin Hua Cheng <lin-hua.cheng@hp.com>
Change-Id: Id12257d3200f8af6ff590fd576c4cb6e414b455a
Implements: blueprint network-rbac

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -257,6 +257,7 @@ TIME_ZONE = "UTC"
 #    'volume': 'cinder_policy.json',
 #    'image': 'glance_policy.json',
 #    'orchestration': 'heat_policy.json',
+#    'network': 'neutron_policy.json',
 #}
 
 # Trove user and database extension support. By default support for
