--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ commands = /bin/bash run_tests.sh -N --no-pep8
 
 [testenv:pep8]
 commands = /bin/bash run_tests.sh -N --pep8
+           {toxinidir}/tools/requirements_style_check.sh requirements.txt test-requirements.txt
 
 [testenv:venv]
 commands = {posargs}
