Disables the clear text password UI by default
The old way of assigning passwords in clear text to instances has been
superseded by the nova get-password feature. A corresponding UI
feature has been recently included in Horizon (see blueprint
"decrypt-and-display-vm-generated-password").

This commit disables the visualization of the old password UI by default.

Change-Id: Ia9a8b5c1c398054fb3d726b93f7fecc332b02efe
Closes-bug: #1291006

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -160,7 +160,7 @@ OPENSTACK_KEYSTONE_BACKEND = {
 # from the UI.
 OPENSTACK_HYPERVISOR_FEATURES = {
     'can_set_mount_point': False,
-    'can_set_password': True,
+    'can_set_password': False,
 }
 
 # The OPENSTACK_NEUTRON_NETWORK settings can be used to enable optional
