Remove unused openstack.common modules
They are not used in horizon code base and out-of-date for a long time.
It is time to remove them.
- notifier and rpc graduated oslo-incubator and are distirubted as a
  separate module (oslo.messaging).
- uuidutils is now deprecated in oslo and standard uuid module is
  recommended to use.
- For other modules, we can re-add them if they becomes needed.

Partial-Bug: #1296337
Change-Id: I7cb569954384fd39e9f91316f5e22ca63f4a00ee

--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -1,13 +1,14 @@
 [DEFAULT]
-module=config
-module=eventlet_backdoor
+module=excutils
 module=fileutils
+module=gettextutils
+module=importutils
+module=jsonutils
 module=install_venv
-module=notifier
+module=local
+module=log
 module=policy
-module=rpc
-module=service
-module=threadgroup
+module=timeutils
 module=with_venv
 
 base=openstack_dashboard
